--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <!-- 第二行 密码 -->
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="text" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
             </div>
             <!-- 第三行 按钮 -->
             <div class="layui-form-item">
@@ -44,8 +44,8 @@
     <!-- 注册 start -->
     <div class="register comment">
         <div class="login_title">
-
         </div>
+        <!-- 表单 -->
         <form class="layui-form" action="">
             <!-- 第一行 用户名 -->
             <div class="layui-form-item">
@@ -55,12 +55,12 @@
             <!-- 第二行 密码 -->
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="text" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input type="password" name="password" required lay-verify="required|len" placeholder="请输入密码" autocomplete="off" class="layui-input pwd">
             </div>
-            <!-- 第三行 密码 -->
+            <!-- 第三行 确认密码 -->
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="text" required lay-verify="required" placeholder="请确认密码" autocomplete="off" class="layui-input">
+                <input type="password" required lay-verify="required|some" placeholder="请确认密码" autocomplete="off" class="layui-input">
             </div>
             <!-- 第四行 按钮 -->
             <div class="layui-form-item">
