--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<script>
+    //判断token是否存在
+    if (!localStorage.getItem('token')) {
+        //跳转到登录页
+        location.href = '/login.html';
+    }
+</script>
 <!DOCTYPE html>
 <html>
 
@@ -28,7 +35,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="">
+                    <a href="javascript:;" id="logout">
                         <i class="layui-icon layui-icon-logout" style="font-size: 18px;"></i> &nbsp;退出
                     </a>
                 </li>
@@ -60,7 +67,7 @@
                         <dl class="layui-nav-child">
                             <dd><a href="http://www.baidu.com" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;基本资料</a></dd>
                             <dd><a href="http://www.qq.com" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;更换头像</a></dd>
-                            <dd><a href="https://www.qq.com" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;重置密码</a></dd>
+                            <dd><a href="/user/repwd.html" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;重置密码</a></dd>
 
                         </dl>
                     </li>
@@ -80,6 +87,9 @@
         </div>
     </div>
     <script src="/assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/common.js"></script>
+    <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
