完成修改用户资料

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <span class="userimg">G</span> <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/userinfo.html" target="fm">基本资料</a></dd>
+                        <dd><a href="" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/repwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -65,7 +65,7 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><i class="layui-icon layui-icon-friends" style="font-size: 18px;"></i> &nbsp;个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="http://www.baidu.com" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;基本资料</a></dd>
+                            <dd><a href="/user/userinfo.html" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;基本资料</a></dd>
                             <dd><a href="http://www.qq.com" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;更换头像</a></dd>
                             <dd><a href="/user/repwd.html" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;重置密码</a></dd>
 
