完成头像修改

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a href="/user/userinfo.html" target="fm">基本资料</a></dd>
-                        <dd><a href="" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/avatar.html" target="fm">更换头像</a></dd>
                         <dd><a href="/user/repwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
@@ -66,7 +66,7 @@
                         <a href="javascript:;"><i class="layui-icon layui-icon-friends" style="font-size: 18px;"></i> &nbsp;个人中心</a>
                         <dl class="layui-nav-child">
                             <dd><a href="/user/userinfo.html" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;基本资料</a></dd>
-                            <dd><a href="http://www.qq.com" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;更换头像</a></dd>
+                            <dd><a href="/user/avatar.html" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;更换头像</a></dd>
                             <dd><a href="/user/repwd.html" target="fm"><i class="layui-icon layui-icon-edit" style="font-size: 18px;"></i> &nbsp;重置密码</a></dd>
 
                         </dl>
