--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="" href="javascript:;"><i class="layui-icon layui-icon-survey" style="font-size: 18px;"></i> &nbsp;文章管理</a>
                         <dl class="layui-nav-child">
                             <dd><a href="/article/category.html" target="fm"><i class="layui-icon layui-icon-slider" style="font-size: 18px;"></i> &nbsp;文章类别</a></dd>
-                            <dd><a href="javascript:;" target="fm"><i class="layui-icon layui-icon-slider" style="font-size: 18px;"></i> &nbsp;文章列表</a></dd>
+                            <dd><a href="/article/article.html" target="fm"><i class="layui-icon layui-icon-slider" style="font-size: 18px;"></i> &nbsp;文章列表</a></dd>
                             <dd><a href="javascript:;" target="fm"><i class="layui-icon layui-icon-slider" style="font-size: 18px;"></i> &nbsp;发表文章</a></dd>
                         </dl>
                     </li>
