时间格式化

--- a/article/article.html
+++ b/article/article.html
@@ -80,7 +80,7 @@
         <tr>
             <td>{{item.title}}</td>
             <td>{{item.cate_name}}</td>
-            <td>{{item.pub_date}}</td>
+            <td>{{item.pub_date|dataFormat}}</td>
             <td>{{item.state}}</td>
             <td>
                 <button type="button" class="layui-btn  layui-btn-xs">编辑</button>
