完成文章的编辑功能

--- a/article/article.html
+++ b/article/article.html
@@ -83,7 +83,7 @@
             <td>{{item.pub_date}}</td>
             <td>{{item.state}}</td>
             <td>
-                <button type="button" class="layui-btn  layui-btn-xs">编辑</button>
+                <a href="/article/edit.html?id={{item.Id}}" class="layui-btn layui-btn-xs">编辑</a>
                 <button class="layui-btn  layui-btn-xs layui-btn-danger" data-id="{{item.Id}}">删除</button>
             </td>
         </tr>
