--- a/article/edit.html
+++ b/article/edit.html
@@ -14,7 +14,7 @@
     <div class="layui-card">
         <div class="layui-card-header">发表文章</div>
         <div class="layui-card-body">
-            <form class="layui-form" action="">
+            <form class="layui-form" action="" lay-filter="aaa">
                 <!-- 文章标题 -->
                 <div class="layui-form-item">
                     <label class="layui-form-label">文章标题</label>
@@ -95,7 +95,7 @@
 
     <script src="/assets/lib/layui/layui.all.js"></script>
     <script src="/assets/js/common.js"></script>
-    <script src="/assets/js/article/publisher.js"></script>
+    <script src="/assets/js/article/edit.js"></script>
 </body>
 
 </html>
